[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameScreenEndless.gd" type="Script" id=2]
[ext_resource path="res://HUDEndless.tscn" type="PackedScene" id=3]
[ext_resource path="res://QPF_assets/music/tutorialBad.ogg" type="AudioStream" id=4]

[node name="GameScreenEndless" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HUDEndless" parent="." index="2" instance=ExtResource( 3 )]

[node name="ColorChangerTimer" type="Timer" parent="Timers" index="2"]
wait_time = 0.25

[node name="LevelAdvanceTimer" type="Timer" parent="Timers" index="3"]
wait_time = 4.0

[node name="TimeScoreTimer" type="Timer" parent="Timers" index="4"]

[node name="StartTimer" type="Timer" parent="Timers" index="5"]
one_shot = true

[node name="LiveLosedSound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 4 )
bus = "SFX"
[connection signal="back_to_main_menu" from="HUDEndless" to="." method="_on_HUD_back_to_main_menu"]
[connection signal="start_game" from="HUDEndless" to="." method="new_game"]
[connection signal="stop_game" from="HUDEndless" to="." method="_on_HUDEndless_stop_game"]
[connection signal="timeout" from="Timers/ColorChangerTimer" to="." method="_on_ColorChangerTimer_timeout"]
[connection signal="timeout" from="Timers/LevelAdvanceTimer" to="." method="_on_LevelAdvanceTimer_timeout"]
[connection signal="timeout" from="Timers/TimeScoreTimer" to="." method="_on_TimeScoreTimer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_StartTimer_timeout"]
